# michalvankodev-site

./: .eslintrc.cjs  .gitattributes  .gitignore  Caddyfile-preview  Cargo.toml  LICENSE  README.md  TODO  askama.toml  email-signature.html  justfile  missing_lfs_files.txt  package-lock.json  package.json  rollup.config.js  svelte.config.cjs  svelte.config.js  tsconfig.json  vite.config.ts
.zellij/: dev-layout.kdl
axum_server/: .gitignore  .lfsconfig-netlify  Cargo.toml  justfile  tailwind.config.js
axum_server/.zellij/: dev-layout.kdl
axum_server/src/: featured_posts.rs  featured_projects.rs  feed.rs  filters.rs  main.rs  post_list.rs  post_parser.rs  project_list.rs  router.rs  tag_list.rs  template.rs
axum_server/src/blog_posts/: blog_post_model.rs  featured_blog_posts.rs  mod.rs  tag_list.rs
axum_server/src/components/: mod.rs  site_footer.rs  site_header.rs
axum_server/src/pages/: admin.rs  blog_post_list.rs  blog_post_page.rs  contact.rs  index.rs  mod.rs  post.rs  post_list.rs  project.rs  project_list.rs
axum_server/src/picture_generator/: export_format.rs  image_generator.rs  mod.rs  picture_markup_generator.rs  resolutions.rs
axum_server/src/post_utils/: post_listing.rs  post_parser.rs
axum_server/src/projects/: featured_projects.rs  mod.rs  project_model.rs
axum_server/styles/: input.css  output.css
axum_server/templates/: base.html  blog_post.html  blog_post_list.html  contact.html  index.html  post.html  post_list.html  post_preview_card.html  post_tag_list.html  project_list.html  site_footer.html  site_header.html
axum_server/templates/components/: blog_post_default_thumbnail.html  blog_post_preview.html  post_preview.html  project_preview_card.html  social_card.html  talent_card.html
(+322 files in other folders)
