[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.14" }
axum = "0.8.0"
chrono = { version = "0.4.31", features = ["serde"] }
pulldown-cmark = { version = "0.13" }
gray_matter = "0.3.0"
rss = "2.0.7"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.6.0", features = ["trace", "fs"] }
tower-livereload = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25.6"
anyhow = "1.0.86"
rayon = "1.10.0"
syntect = "5.2.0"
indoc = "2.0.5"
askama_escape = "0.13.0"
mime_guess = "2.0.5"

[dev-dependencies]
pretty_assertions = "1"
