[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.4.0"
axum = "0.7.3"
chrono = { version = "0.4.31", features = ["serde"] }
pulldown-cmark = { version = "0.10" }
gray_matter = "0.2.6"
rss = "2.0.7"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "fs"] }
tower-livereload = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build]
rustflags = ["-Z", "threads=8"]

[profile.dev]
debug = true
opt-level = 1
lto = "thin"
panic = "unwind"
strip = false
